--- a/ogranizED/app/src/main/AndroidManifest.xml
+++ b/ogranizED/app/src/main/AndroidManifest.xml
@@ -20,7 +20,26 @@
             </intent-filter>
         </activity>
         <activity android:name=".Main2Activity" />
-        <activity android:name=".generic_activity"></activity>
+        <activity android:name=".generic_activity" />
+
+        <provider
+            android:name="android.support.v4.content.FileProvider"
+            android:authorities="com.example.myapp.fileprovider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/filepaths" />
+        </provider>
+
+
+        <activity android:name=".receiver_activity">
+            <intent-filter>
+                <action android:name="android.intent.action.SEND"  />
+                <category android:name="android.intent.category.DEFAULT"  />
+                <data android:mimeType="image/*"  />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
